# authenticated_rust_web_api

./: Cargo.toml  README.md  request.http
migrations/: 20250103053931_create_users.up.sql  20250105053145_create_posts.down.sql  20250105053145_create_posts.up.sql
src/: handler.rs  lib.rs  main.rs  middleware.rs  model.rs  queries.rs  utils.rs
src/handler/: auth.rs  generic.rs  posts.rs
src/handler/auth/: authenticate.rs  register.rs
